--- a/source/tools/linux/Makefile.in
+++ b/source/tools/linux/Makefile.in
@@ -86,13 +86,13 @@ bin_PROGRAMS = asc_demount                asc_mount                  asc_makegfx
 
 asc_demount_SOURCES = demount.cpp      basestrm.cpp misc.cpp ascstring.cpp strtmesg.cpp
 asc_mount_SOURCES = mount.cpp        basestrm.cpp misc.cpp ascstring.cpp strtmesg.cpp
-#asc_gfx2pcx_SOURCES     = bi2pcx.cpp       basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp
-asc_makegfx_SOURCES = makegfx.cpp      basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp
-asc_mntgraph_SOURCES = mntgraph.cpp     basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp
-asc_viewid_SOURCES = viewid.cpp       basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp
-asc_tank2pcx_SOURCES = pcxtank.cpp      basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp
-asc_bin2text_SOURCES = bin2text.cpp     basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp 
-asc_weaponguide_SOURCES = weaponguide.cpp  basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp
+#asc_gfx2pcx_SOURCES     = bi2pcx.cpp       basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp stringtokenizer.cpp
+asc_makegfx_SOURCES = makegfx.cpp      basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp stringtokenizer.cpp
+asc_mntgraph_SOURCES = mntgraph.cpp     basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp stringtokenizer.cpp
+asc_viewid_SOURCES = viewid.cpp       basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp stringtokenizer.cpp itemrepository.cpp
+asc_tank2pcx_SOURCES = pcxtank.cpp      basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp stringtokenizer.cpp
+asc_bin2text_SOURCES = bin2text.cpp     basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp stringtokenizer.cpp itemrepository.cpp
+asc_weaponguide_SOURCES = weaponguide.cpp  basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp stringtokenizer.cpp itemrepository.cpp
 
 asc_mount_LDADD = -lSDL -lSDLmm -lpthread @LDADDLIBBZ2@
 asc_demount_LDADD = -lSDL -lSDLmm -lpthread @LDADDLIBBZ2@
@@ -124,28 +124,32 @@ asc_makegfx_OBJECTS =  makegfx.o basestrm.o misc.o ascstring.o \
 loadpcxc.o palette.o sgstream.o newfont.o basegfx.o graphicset.o \
 gameoptions.o CLoadable.o Named.o Property.o PropertyGroup.o stack.o \
 buildingtype.o typen.o vehicletype.o password.o strtmesg.o \
-textfileparser.o terraintype.o objecttype.o textfiletags.o
+textfileparser.o terraintype.o objecttype.o textfiletags.o \
+stringtokenizer.o
 asc_makegfx_DEPENDENCIES =  ../../sdl/libsdl.a
 asc_makegfx_LDFLAGS = 
 asc_mntgraph_OBJECTS =  mntgraph.o basestrm.o misc.o ascstring.o \
 loadpcxc.o palette.o sgstream.o newfont.o basegfx.o graphicset.o \
 gameoptions.o CLoadable.o Named.o Property.o PropertyGroup.o stack.o \
 buildingtype.o typen.o vehicletype.o password.o strtmesg.o \
-textfileparser.o terraintype.o objecttype.o textfiletags.o
+textfileparser.o terraintype.o objecttype.o textfiletags.o \
+stringtokenizer.o
 asc_mntgraph_DEPENDENCIES =  ../../sdl/libsdl.a
 asc_mntgraph_LDFLAGS = 
 asc_viewid_OBJECTS =  viewid.o basestrm.o misc.o ascstring.o loadpcxc.o \
 palette.o sgstream.o newfont.o basegfx.o graphicset.o gameoptions.o \
 CLoadable.o Named.o Property.o PropertyGroup.o stack.o buildingtype.o \
 typen.o vehicletype.o password.o strtmesg.o textfileparser.o \
-terraintype.o objecttype.o textfiletags.o itemrepository.o
+terraintype.o objecttype.o textfiletags.o stringtokenizer.o \
+itemrepository.o
 asc_viewid_DEPENDENCIES =  ../../sdl/libsdl.a
 asc_viewid_LDFLAGS = 
 asc_tank2pcx_OBJECTS =  pcxtank.o basestrm.o misc.o ascstring.o \
 loadpcxc.o palette.o sgstream.o newfont.o basegfx.o graphicset.o \
 gameoptions.o CLoadable.o Named.o Property.o PropertyGroup.o stack.o \
 buildingtype.o typen.o vehicletype.o password.o strtmesg.o \
-textfileparser.o terraintype.o objecttype.o textfiletags.o
+textfileparser.o terraintype.o objecttype.o textfiletags.o \
+stringtokenizer.o
 asc_tank2pcx_DEPENDENCIES =  ../../sdl/libsdl.a
 asc_tank2pcx_LDFLAGS = 
 asc_bin2text_OBJECTS =  bin2text.o basestrm.o misc.o ascstring.o \
@@ -153,7 +157,7 @@ loadpcxc.o palette.o sgstream.o newfont.o basegfx.o graphicset.o \
 gameoptions.o CLoadable.o Named.o Property.o PropertyGroup.o stack.o \
 buildingtype.o typen.o vehicletype.o password.o strtmesg.o \
 textfileparser.o terraintype.o objecttype.o textfiletags.o \
-itemrepository.o
+stringtokenizer.o itemrepository.o
 asc_bin2text_DEPENDENCIES =  ../../sdl/libsdl.a
 asc_bin2text_LDFLAGS = 
 asc_weaponguide_OBJECTS =  weaponguide.o basestrm.o misc.o ascstring.o \
@@ -161,7 +165,7 @@ loadpcxc.o palette.o sgstream.o newfont.o basegfx.o graphicset.o \
 gameoptions.o CLoadable.o Named.o Property.o PropertyGroup.o stack.o \
 buildingtype.o typen.o vehicletype.o password.o strtmesg.o \
 textfileparser.o terraintype.o objecttype.o textfiletags.o \
-itemrepository.o
+stringtokenizer.o itemrepository.o
 asc_weaponguide_DEPENDENCIES =  ../../sdl/libsdl.a
 asc_weaponguide_LDFLAGS = 
 CXXCOMPILE = $(CXX) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
@@ -181,9 +185,9 @@ DEP_FILES =  .deps/CLoadable.P .deps/Named.P .deps/Property.P \
 .deps/loadpcxc.P .deps/makegfx.P .deps/misc.P .deps/mntgraph.P \
 .deps/mount.P .deps/newfont.P .deps/objecttype.P .deps/palette.P \
 .deps/password.P .deps/pcxtank.P .deps/sgstream.P .deps/stack.P \
-.deps/strtmesg.P .deps/terraintype.P .deps/textfileparser.P \
-.deps/textfiletags.P .deps/typen.P .deps/vehicletype.P .deps/viewid.P \
-.deps/weaponguide.P
+.deps/stringtokenizer.P .deps/strtmesg.P .deps/terraintype.P \
+.deps/textfileparser.P .deps/textfiletags.P .deps/typen.P \
+.deps/vehicletype.P .deps/viewid.P .deps/weaponguide.P
 SOURCES = $(asc_demount_SOURCES) $(asc_mount_SOURCES) $(asc_makegfx_SOURCES) $(asc_mntgraph_SOURCES) $(asc_viewid_SOURCES) $(asc_tank2pcx_SOURCES) $(asc_bin2text_SOURCES) $(asc_weaponguide_SOURCES)
 OBJECTS = $(asc_demount_OBJECTS) $(asc_mount_OBJECTS) $(asc_makegfx_OBJECTS) $(asc_mntgraph_OBJECTS) $(asc_viewid_OBJECTS) $(asc_tank2pcx_OBJECTS) $(asc_bin2text_OBJECTS) $(asc_weaponguide_OBJECTS)
 
