--- a/source/unix/Makefile.in
+++ b/source/unix/Makefile.in
@@ -78,7 +78,7 @@ SGML2MAN = @SGML2MAN@
 VERSION = @VERSION@
 
 bin_PROGRAMS = asc
-asc_SOURCES = unitctrl.cpp soundList.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp newfont.cpp network.cpp missions.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp building.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp astar2.cpp vehicletype.cpp buildingtype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp password_dialog.cpp replay.cpp research.cpp mapdisplay.cpp resourcenet.cpp dashboard.cpp ascstring.cpp graphicset.cpp vehicle.cpp buildings.cpp networkdata.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp
+asc_SOURCES = unitctrl.cpp soundList.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp newfont.cpp network.cpp missions.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp building.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp astar2.cpp vehicletype.cpp buildingtype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp password_dialog.cpp replay.cpp research.cpp mapdisplay.cpp resourcenet.cpp dashboard.cpp ascstring.cpp graphicset.cpp vehicle.cpp buildings.cpp networkdata.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp stringtokenizer.cpp
 
 
 asc_LDADD = ../ai/libai.a ../sdl/libsdl.a ../libs/triangul/libtriangul.a -lSDL -lpthread -lSDL_image -lSDL_mixer -lSDLmm @LDADDLIBBZ2@
@@ -106,7 +106,8 @@ vehicletype.o buildingtype.o containerbase.o mapalgorithms.o \
 viewcalculation.o gamemap.o password.o password_dialog.o replay.o \
 research.o mapdisplay.o resourcenet.o dashboard.o ascstring.o \
 graphicset.o vehicle.o buildings.o networkdata.o textfileparser.o \
-terraintype.o objecttype.o textfiletags.o itemrepository.o
+terraintype.o objecttype.o textfiletags.o itemrepository.o \
+stringtokenizer.o
 asc_DEPENDENCIES =  ../ai/libai.a ../sdl/libsdl.a \
 ../libs/triangul/libtriangul.a
 asc_LDFLAGS = 
@@ -132,9 +133,10 @@ DEP_FILES =  .deps/CLoadable.P .deps/Named.P .deps/Property.P \
 .deps/palette.P .deps/password.P .deps/password_dialog.P .deps/pd.P \
 .deps/replay.P .deps/research.P .deps/resourcenet.P .deps/sg.P \
 .deps/sgstream.P .deps/soundList.P .deps/spfst.P .deps/stack.P \
-.deps/strtmesg.P .deps/terraintype.P .deps/textfileparser.P \
-.deps/textfiletags.P .deps/typen.P .deps/unitctrl.P .deps/vehicle.P \
-.deps/vehicletype.P .deps/viewcalculation.P .deps/weather.P
+.deps/stringtokenizer.P .deps/strtmesg.P .deps/terraintype.P \
+.deps/textfileparser.P .deps/textfiletags.P .deps/typen.P \
+.deps/unitctrl.P .deps/vehicle.P .deps/vehicletype.P \
+.deps/viewcalculation.P .deps/weather.P
 SOURCES = $(asc_SOURCES)
 OBJECTS = $(asc_OBJECTS)
 
