--- a/source/unix/mapeditor/Makefile.in
+++ b/source/unix/mapeditor/Makefile.in
@@ -83,10 +83,10 @@ CXXFLAGS = @CXXFLAGS@ -Dkarteneditor -I./ -DFREEMAPZOOM -DNEWKEYB
 
 bin_PROGRAMS = asc_mapedit asc_map2pcx
 
-asc_mapedit_SOURCES = edevents.cpp edgen.cpp edglobal.cpp edmain.cpp edselfnt.cpp edmisc.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp password_dialog.cpp research.cpp mapdisplay.cpp ascstring.cpp graphicset.cpp vehicle.cpp buildings.cpp networkdata.cpp resourcenet.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp
+asc_mapedit_SOURCES = edevents.cpp edgen.cpp edglobal.cpp edmain.cpp edselfnt.cpp edmisc.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp password_dialog.cpp research.cpp mapdisplay.cpp ascstring.cpp graphicset.cpp vehicle.cpp buildings.cpp networkdata.cpp resourcenet.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp stringtokenizer.cpp
 asc_mapedit_LDADD = ../../sdl/libsdl.a ../../libs/triangul/libtriangul.a -lSDL -lpthread -lSDL_image -lSDLmm @LDADDLIBBZ2@
 
-asc_map2pcx_SOURCES = map2pcx.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp password_dialog.cpp research.cpp mapdisplay.cpp ascstring.cpp graphicset.cpp vehicle.cpp buildings.cpp networkdata.cpp resourcenet.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp
+asc_map2pcx_SOURCES = map2pcx.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp password_dialog.cpp research.cpp mapdisplay.cpp ascstring.cpp graphicset.cpp vehicle.cpp buildings.cpp networkdata.cpp resourcenet.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp stringtokenizer.cpp
 asc_map2pcx_LDADD = ../../sdl/libsdl.a ../../libs/triangul/libtriangul.a -lSDL -lpthread -lSDL_image -lSDLmm @LDADDLIBBZ2@
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../../config.h
@@ -106,7 +106,8 @@ PropertyGroup.o gameoptions.o Named.o buildingtype.o vehicletype.o \
 containerbase.o mapalgorithms.o viewcalculation.o gamemap.o password.o \
 password_dialog.o research.o mapdisplay.o ascstring.o graphicset.o \
 vehicle.o buildings.o networkdata.o resourcenet.o textfileparser.o \
-terraintype.o objecttype.o textfiletags.o itemrepository.o
+terraintype.o objecttype.o textfiletags.o itemrepository.o \
+stringtokenizer.o
 asc_mapedit_DEPENDENCIES =  ../../sdl/libsdl.a \
 ../../libs/triangul/libtriangul.a
 asc_mapedit_LDFLAGS = 
@@ -118,7 +119,7 @@ vehicletype.o containerbase.o mapalgorithms.o viewcalculation.o \
 gamemap.o password.o password_dialog.o research.o mapdisplay.o \
 ascstring.o graphicset.o vehicle.o buildings.o networkdata.o \
 resourcenet.o textfileparser.o terraintype.o objecttype.o \
-textfiletags.o itemrepository.o
+textfiletags.o itemrepository.o stringtokenizer.o
 asc_map2pcx_DEPENDENCIES =  ../../sdl/libsdl.a \
 ../../libs/triangul/libtriangul.a
 asc_map2pcx_LDFLAGS = 
@@ -143,9 +144,10 @@ DEP_FILES =  .deps/CLoadable.P .deps/Named.P .deps/Property.P \
 .deps/networkdata.P .deps/newfont.P .deps/objecttype.P .deps/palette.P \
 .deps/password.P .deps/password_dialog.P .deps/pd.P .deps/research.P \
 .deps/resourcenet.P .deps/sgstream.P .deps/spfst.P .deps/stack.P \
-.deps/strtmesg.P .deps/terraintype.P .deps/textfileparser.P \
-.deps/textfiletags.P .deps/typen.P .deps/vehicle.P .deps/vehicletype.P \
-.deps/viewcalculation.P .deps/weather.P
+.deps/stringtokenizer.P .deps/strtmesg.P .deps/terraintype.P \
+.deps/textfileparser.P .deps/textfiletags.P .deps/typen.P \
+.deps/vehicle.P .deps/vehicletype.P .deps/viewcalculation.P \
+.deps/weather.P
 SOURCES = $(asc_mapedit_SOURCES) $(asc_map2pcx_SOURCES)
 OBJECTS = $(asc_mapedit_OBJECTS) $(asc_map2pcx_OBJECTS)
 
