--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl AC_REVISION($Revision: 1.64 $)dnl
+dnl AC_REVISION($Revision: 1.65 $)dnl
 dnl AM_MAINTAINER_MODE
 AC_INIT(source/typen.h)
 
@@ -252,7 +252,7 @@ fi
 dnl what gehts packed into main.con (the data container file) and in which
 dnl order
 
-MAINCONDATA="palette.pal data.version *.gfx title.jpg title_mapeditor.jpg \
+MAINCONDATA="palette.pal data.version title.jpg title_mapeditor.jpg \
 progress.* smalaril.fnt usablack.fnt arial8.fnt \
 msystem.fnt gui.fnt guicol.fnt monogui.fnt sounds.txt \
 height2.raw windp.raw windpfei.raw farbe.raw \
@@ -285,7 +285,7 @@ dnl what gehts packed into main.con (the data container file)
 AC_SUBST([MAINCONDATA])
 
 AC_MSG_CHECKING("music files")
-missingmusic=`./checkfordata.pl data/music/frontiers.mp3 data/music/time_to_strike.mp3`
+missingmusic=`./checkfordata.pl data/music/frontiers.mp3 data/music/time_to_strike.mp3 data/music/machine_wars.mp3`
 if test "x$missingmusic" = x ; then
   AC_MSG_RESULT("yes")
   MUSICDIR=music
