--- a/configure.in
+++ b/configure.in
@@ -148,15 +148,27 @@ supplied SDLmm.RPM installed, perhaps the SDLmm-devel.RPM is missing.
 If your distribution does not include the SDLmm library, you can get it 
 from http://sdlmm.sf.net ]]))
 
-AM_PATH_PARAGUI(1.0.1,
-            :,
-            AC_MSG_ERROR([[
-*** PARAGUI version 1.0.1 not found! ASC requires the Paragui library. 
-If you have a distribution supplied Paragui.RPM installed, perhaps the 
-Paragui-devel.RPM is missing. If your distribution does not include the 
-Paragui library, you can get it from http://www.paragui.org/ ]]))
 
-dnl echo Paragui CFLAGS are $PARAGUI_CFLAGS
+AC_ARG_ENABLE( paragui, [  --disable-paragui  Don't use paragui .], useparagui=no )
+
+
+
+if test "x$useparagui" != "xno"; then
+
+   AM_PATH_PARAGUI(1.0.1,
+               :,
+               AC_MSG_ERROR([[
+   *** PARAGUI version 1.0.1 not found! ASC requires the Paragui library.
+   If you have a distribution supplied Paragui.RPM installed, perhaps the
+   Paragui-devel.RPM is missing. If your distribution does not include the
+   Paragui library, you can get it from http://www.paragui.org/ ]]))
+
+   dnl echo Paragui CFLAGS are $PARAGUI_CFLAGS
+else
+   PARAGUI_CFLAGS="-DNO_PARAGUI"
+   PARAGUI_LIBS=""
+fi
+
 
 AC_LANG_RESTORE
 
